# bios

./: .clang-format  .gitignore  README.md  build.sh  lombok.config  pom.xml  requirements.txt
.github/workflows/: maven.yml
certs/: root-ca.cert.pem  root-ca.key.pem
common/: pom.xml
dev-utils/: Dockerfile  README.md  build.sh  cleanup.sh
dev-utils/load-generator/: load.properties  log4j.xml  pom.xml  tar-assembly.xml
dev-utils/resources/: jupyter_notebook_config.json  load_schema_streams.json  provision_streams.py  requirements.txt  start-bios-dev.sh
docker/: .gitignore  Dockerfile.diagnoser  Dockerfile.it  create_image_run_container.sh  it-entrypoint.sh  jmxremote.password
docker/certs/: README  empty.keystore  server-default.cert.pem  server-default.key.pem  server-default.p12
docker/db/: Dockerfile  nodetool-ssl.properties  start-db.sh
docker/dbdozer/: Dockerfile  nodetool-ssl.properties  start-dbdozer.sh
docker/devinstance/: Dockerfile
docker/nginx/: Dockerfile  README.md  htpasswd  logrotate.nginx  nginx.conf  send_usr_signal.sh  ssl.conf  start_lb_services.sh
docker/patches/: cassandra.yaml.patch00  standalone.xml.patch
docs/: SHARED_PROPERTIES.md
home-dev/configuration/: README_certs.md  log4j2.xml  server.cert.pem  server.key.pem  server.options  server.p12
home/configuration/: application.keystore  log4j2.xml  nghttpx.conf  server.cert.pem  server.key.pem  server.options  server.p12
integrations/: .gitignore  Dockerfile  README.md  build-docker.sh  build.sh  cleanup.sh  pom.xml  start-bios-integrations.sh
integrations/deli/: .gitignore  README.md  _version.py.tmpl  build.sh  cleanup.sh  deli_fb_ad.py  deli_file.py  deli_file_tailer.py  deli_google_ad.py  deli_kafka.py  deli_rest_client.py  deli_s3.py  deli_sql.py  deli_webhook.py  integrations.ini  log-monitor.sh  requirements.txt  setup-config.sh  setup.cfg  setup.py  start-bios-integrations.sh
integrations/deli-j/: .gitignore  integrations.properties  log4j2.xml  pom.xml  tar-assembly.xml
lb/: Dockerfile  load-balancer.conf  pom.xml  set_certfiles.sh
maintainer/: .env  .gitignore  Dockerfile  README.md  _version.py.tmpl  add_backup_keyspace  build-docker.sh  build.sh  db_credentials.yaml  dbdozer-dev.yaml  dbdozer.yaml  pom.xml  register-backup-keyspace  requirements.txt  restore_util.sh  setup.cfg  setup.py  start-dbdozer.sh  start-lb-blacklist-generator.sh  start-supervisor.sh
maintainer/src/dbdozer/: __init__.py  context_maintainer.py  db_client.py  db_status_collector.py  dbdozer.py  dbdozer_utils.py  dozer_conf.py  keyspace_category.py  options.py  scheduler.py
maintainer/src/test/: tablestats.txt  test_context_maintainer.py  test_scheduler.py  test_tablestats_parser.py
scripts/: BuildVersion.java.tmpl  add-endpoint  create-mbean-user.cql  generate-db-ssl  get_component.sh  makeversion-java  tablename.py
sdk/: pom.xml
sdk/csdk/: .gitignore  CMakeLists.txt  README.md  build.sh  gtest.cmake  libevent.cmake  nghttp2.cmake  pom.xml  protobuf.cmake  rapidjson.cmake  sole.cmake  version.h.in
sdk/csdk/include/tfoscsdk/: csdk.h  directapi.h  log.h  message_struct.h  models.h  properties.h  status.h  types.h
sdk/csdk/include/tfoscsdk/api/: connection_manager.h  dapi_bridge.h  data_pipe.h  data_pipe_factory.h  echo_control.h  logical_connection.h  logical_pipe.h
sdk/csdk/protobuf/_bios/: data.pb.cc  data.pb.h
sdk/csdk/test/: CMakeLists.txt  modules_test.cc
sdk/csdk/test/server-access/: CMakeLists.txt  dapi_server_test.cc  http2cli_test.cc  physical_pipe_impl_test.cc
sdk/csdk/test/tfos-common/: CMakeLists.txt  event_loop_test.cc  message_handler_test.cc  object_mapper_test.cc  statuses_test.cc  utils_test.cc
sdk/csdk/test/tfos-physical/: CMakeLists.txt  connections_test.cc  http_resource_resolver_test.cc
sdk/csdk/tfos-common/: buffer_pool.h  event_loop.h  keywords.h  logger.h  message_handler.h  object_mapper.h  session.h  utils.h
sdk/csdk/tfos-common/impl/: csdk.cc  event_loop.cc  ingest_bulk_ctx.h  logger.cc  message_handler.cc  mock_message_handler.h  object_mapper.cc  session.cc  status.cc  utils.cc
sdk/csdk/tfos-dapi/: dapi_modules.cc  dapi_modules.h  directapi.cc
sdk/csdk/tfos-physical/: connection.h  connection_manager.h  connection_set.h  physical_pipe.h  resource_resolver.h
sdk/csdk/tfos-physical/impl/: connection.cc  connection_manager.cc  fan_router_connection_set.cc  fan_router_connection_set.h  http2_session.cc  http2_session.h  http_constants.h  http_resource_resolver.cc  http_resource_resolver.h  http_response_handler.cc  http_response_handler.h  mock_connection_manager.h  physical_pipe_impl.cc  physical_pipe_impl.h
sdk/sdk-java/: pom.xml
sdk/sdk-java/src/main/native/: CMakeLists.txt
sdk/sdk-java/src/main/native/csdk/: csdkdirect.cc  csdkdirect.h  jni_connector.cc  jni_connector.h  jni_echo.cc  jni_echo.h  jni_pipe.cc  jni_pipe.h  jni_store.cc  jni_store.h  jni_subscriber.cc  jni_subscriber.h
sdk/sdk-js/: .gitignore  README.md  build.sh  devsetup.sh  package.bios.json.tmpl  pom.xml  publish.sh  standalone.xml.for-dev-vm-js-integration-tests.patch
sdk/sdk-python/: .gitignore  README.md  build.sh  pom.xml  requirements.txt  run-pylint.sh  setup.py
server/: pom.xml
server/bios-server/: Dockerfile  pom.xml
server/parquet-jni/: .gitignore  pom.xml
server/parquet-jni/src/main/native/: CMakeLists.txt  arrow.cmake
server/parquet-jni/src/main/native/parquet/: jni_arrow_config.h  parquet_common.h  parquet_jni.cc  parquet_jni.h  parquet_writer.cc  parquet_writer.h  stream_creator.cc  stream_creator.h  writer_store.cc  writer_store.h
sql/: .gitignore  README.md  build-docker.sh  pom.xml  trino-bios-design.puml
sql/config-templates/: config.properties  log.properties  password-authenticator.properties
sql/nginx-config/: load-balancer.conf
sql/resources/: Dockerfile  start-bios-sql.sh  trino-setup-config.sh
storage/: Dockerfile  cassandra-env.sh  cassandra.yaml  jvm11-server.options  pom.xml
tests/: pom.xml  verify-bios.sh  verify-integrations.sh  verify_on_the_fly_select.sh
unittest-with-storage/: .gitignore  pom.xml
(+2080 files in other folders)
