# Copyright (C) 2024 Isima, Inc. Confidential.
# All rights reserved. Do not distribute without consent.

[metadata]
name = dbdozer
version = attr: dbdozer.__version__

[options]
package_dir =
    =src

packages =
    dbdozer

install_requires =
    pyyaml>=5.4
    cassandra-driver==3.29.0

[options.entry_points]
console_scripts =
    dbdozer = dbdozer:main

[build-system]
requires = ["setuptools"]
